--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
 /* CSS Document */
 
 body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
+	/*font-family: Arial, Helvetica, sans-serif;*/
+	font-family: Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
@@ -11,9 +12,12 @@ body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
+  display: flex;
+  flex-direction: column;
 }
 ul, li {
-	font-family: Arial, Helvetica, sans-serif;
+	/*font-family: Arial, Helvetica, sans-serif;*/
+	font-family: Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
@@ -29,15 +33,26 @@ a img{
 	border: none 0px #fff;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
+	/*font-family: Arial, Helvetica, sans-serif;*/
+	font-family: Helvetica, sans-serif;
   margin: 0 0 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+body,
+/*.inside header,*/
+.inside #maincontent,
+.inside #maincontent #map-container,
+.inside #maincontent #restaurant-container,
+.inside #maincontent #reviews-container,
+.inside #footer {
+  display: flex;
+  flex-direction: column;
+}
 #maincontent {
   background-color: #f3f3f3;
-  min-height: 100%;
+  min-width: 100%;
 }
 #footer {
   background-color: #444;
@@ -51,32 +66,46 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: inherit;
   background-color: #252831;
   text-align:center;
 }
 nav h1 {
+  /* to override the z-index from leaflet.css */
+  z-index: 1000;
+  box-sizing: border-box;
+  padding: 16px 0;
   margin: auto;
-}
-nav h1 a {
   color: #fff;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 10px;
+  font-size: 16px;
+  /*font-weight: 200;*/
+  font-style: normal;
+  font-weight: 100;
+  /*letter-spacing: 10px;*/
+  height: 56px;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+  /* to override the z-index from leaflet.css */
+  z-index: 1000;
+    box-sizing: border-box;
+    padding: 10px 16px 10px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    /*font-size: 14px;*/
+    height: 46px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
+    /*position: absolute;
+    top: */
 }
 
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    float: left;
+    font-size: 16px;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -102,6 +131,10 @@ nav h1 a {
   height: 400px;
   width: 100%;
   background-color: #ccc;
+}
+#map .leaflet-top,
+#map .leaflet-bottom {
+  z-index: 999;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
@@ -184,22 +217,29 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
+  position: sticky;
   top: 0;
+  /* setting a static header size */
+  height: 102px;
   width: 100%;
   z-index: 1000;
 }
+.inside #maincontent.restaurant-main {
+  /*position: absolute;
+  top: 102px;*
+}
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
+  height: 400px;
+  position: absolute;
   right: 0;
-  top: 80px;
-  width: 50%;
+  /*top: 80px;*/
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
-  height: 100%;
+  /*height: 100%;*/
+  height: 400px;
   width: 100%;
 }
 .inside #footer {
@@ -218,7 +258,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	/*width: 90%;*/
+  width: inherit;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,13 +275,14 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: inherit;
 }
 #restaurant-container, #reviews-container {
+  box-sizing: border-box;
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 40px 40px 30px;
+  width: 100%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
