--- a/css/styles.css
+++ b/css/styles.css
@@ -1,60 +1,108 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	/*font-family: Arial, Helvetica, sans-serif;*/
-	font-family: Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+body,td,th,p {
+  /*font-family: Arial, Helvetica, sans-serif;*/
+  font-family: Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
+  line-height: 1.5;
 }
+
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+  background-color: #fdfdfd;
+  margin: 0;
+  position: relative;
   display: flex;
   flex-direction: column;
 }
+
 ul, li {
-	/*font-family: Arial, Helvetica, sans-serif;*/
-	font-family: Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+  /*font-family: Arial, Helvetica, sans-serif;*/
+  font-family: Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
 }
+
 a {
-	color: orange;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
+
 a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+  color: #3397db;
+  text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+
+a img {
+  border: none 0px #fff;
 }
+
 h1, h2, h3, h4, h5, h6 {
-	/*font-family: Arial, Helvetica, sans-serif;*/
-	font-family: Helvetica, sans-serif;
+  /*font-family: Arial, Helvetica, sans-serif;*/
+  font-family: Helvetica, sans-serif;
   margin: 0 0 20px;
 }
+
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
-body,
-/*.inside header,*/
-.inside #maincontent,
-.inside #maincontent #map-container,
-.inside #maincontent #restaurant-container,
-.inside #maincontent #reviews-container,
-.inside #footer {
-  display: flex;
-  flex-direction: column;
+
+/*body,
+.inside header,*/
+.inside .maincontent,
+.inside .maincontent .map-container,
+.inside .maincontent .restaurant-container,
+.inside .maincontent .reviews-container,
+.inside .footer {
+  /*display: flex;
+  flex-direction: column;*/
+  
 }
-#maincontent {
+
+.inside .maincontent {
+  display: grid;
+  grid-template-columns: 1fr;
   background-color: #f3f3f3;
   min-width: 100%;
 }
-#footer {
+
+/* ============= .inside (page body contents) ============= */
+
+.inside header {
+  position: sticky;
+  top: 0;
+  /* setting a static header size */
+  height: 102px;
+  width: 100%;
+  z-index: 1000;
+}
+
+.inside .maincontent.restaurant-main {
+  /*position: absolute;
+  top: 102px;*/
+}
+
+.inside .map-container {
+  background: blue none repeat scroll 0 0;
+  height: 400px;
+  /*position: absolute;
+  right: 0;
+  top: 80px;*/
+  width: 100%;
+}
+
+.inside .map {
+  background-color: #ccc;
+  /*height: 100%;*/
+  height: 400px;
+  width: 100%;
+}
+
+.footer {
+  bottom: 0;
+  position: absolute;
+  width: 100%;
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
@@ -62,14 +110,18 @@ body,
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+  box-sizing: border-box;
 }
+
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
   height: inherit;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
+
 nav h1 {
   /* to override the z-index from leaflet.css */
   z-index: 1000;
@@ -86,101 +138,122 @@ nav h1 {
   letter-spacing: 0.3em;
   text-transform: uppercase;
 }
-#breadcrumb {
+
+.breadcrumb {
   /* to override the z-index from leaflet.css */
   z-index: 1000;
-    box-sizing: border-box;
-    padding: 10px 16px 10px;
-    list-style: none;
-    background-color: #eee;
+  box-sizing: border-box;
+  padding: 10px 0 10px 20px;
+  list-style: none;
+  background-color: #eee;
     /*font-size: 14px;*/
-    height: 46px;
-    margin: 0;
-    width: 100%;
+  height: 46px;
+  margin: 0;
+  width: 100%;
     /*position: absolute;
     top: */
 }
 
 /* Display list items side by side */
-#breadcrumb li {
-    display: inline;
-    float: left;
-    font-size: 16px;
+.breadcrumb li {
+  display: inline;
+  float: left;
+  font-size: 16px;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+.breadcrumb li+li:before {
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
-#breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+.breadcrumb li a {
+  color: #0275d8;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
-#breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
 }
 /* ====================== Map ====================== */
-#map {
+.map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
-#map .leaflet-top,
-#map .leaflet-bottom {
+
+.map .leaflet-top,
+.map .leaflet-bottom {
   z-index: 999;
 }
 /* ====================== Restaurant Filtering ====================== */
+.results-container {
+}
+
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 80px;
   background-color: #3397DB;
   align-items: center;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0 auto;
+  padding: 10px 0;
+  text-align: center;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
+  /*font-family: Arial,sans-serif;*/
+  font-family: Helvetica,sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 0 auto;
   padding: 0 10px;
-  width: 200px;
+  width: 90%;
+}
+
+.filter-options .filter-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 360px;
+  justify-content: space-evenly;
+  margin: 0 auto;
 }
 
 /* ====================== Restaurant Listing ====================== */
-#restaurants-list {
+.restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
 }
-#restaurants-list li {
+
+.restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 20px auto;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  min-width: 270px;
+  border-radius: 20px 0 20px 0;
 }
-#restaurants-list .restaurant-img {
+
+.restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
@@ -188,7 +261,8 @@ nav h1 {
   min-height: 248px;
   min-width: 100%;
 }
-#restaurants-list li h1 {
+
+.restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 14pt;
@@ -198,11 +272,13 @@ nav h1 {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
-#restaurants-list p {
+
+.restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
-#restaurants-list li a {
+
+.restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
@@ -216,38 +292,16 @@ nav h1 {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-  position: sticky;
-  top: 0;
-  /* setting a static header size */
-  height: 102px;
-  width: 100%;
-  z-index: 1000;
-}
-.inside #maincontent.restaurant-main {
-  /*position: absolute;
-  top: 102px;*
-}
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 400px;
-  position: absolute;
-  right: 0;
-  /*top: 80px;*/
+.restaurant-container,
+.reviews-container {
+  box-sizing: border-box;
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  padding: 40px 20px 30px;
   width: 100%;
 }
-.inside #map {
-  background-color: #ccc;
-  /*height: 100%;*/
-  height: 400px;
-  width: 100%;
-}
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
-#restaurant-name {
+
+.restaurant-container .restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 20pt;
@@ -257,15 +311,30 @@ nav h1 {
   text-transform: uppercase;
   line-height: 1.1;
 }
-#restaurant-img {
-	/*width: 90%;*/
-  width: inherit;
+
+.restaurant-container .restaurant-info {
+  border-radius: 20px 0 20px 0;
+  box-shadow: 2px 2px 5px #f1f1f1;
+  width: 100%;
+  background-color: #fff;
+  border: 2px solid #f3f3f3;
 }
-#restaurant-address {
+
+.restaurant-info .restaurant-img {
+  /*width: 90%;*/
+  width: inherit;
+  /* We have to individually round this corner so
+   * it fits the look of the container.
+   */
+  border-radius: 20px 0 0 0;
+}
+
+.restaurant-info .restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
 }
-#restaurant-cuisine {
+
+.restaurant-info .restaurant-cuisine {
   background-color: #333;
   color: #ddd;
   font-size: 12pt;
@@ -275,43 +344,244 @@ nav h1 {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: inherit;
+  width: inherit;
 }
-#restaurant-container, #reviews-container {
-  box-sizing: border-box;
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 40px 40px 30px;
+
+.restaurant-info .restaurant-hours {
   width: 100%;
 }
-#reviews-container {
-  padding: 30px 40px 80px;
+
+.restaurant-info .restaurant-hours td {
+  color: #666;
 }
-#reviews-container h2 {
+
+.reviews-container {
+  padding: 30px 20px 80px;
+}
+
+.reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
-#reviews-list {
+
+.reviews-list {
   margin: 0;
   padding: 0;
 }
-#reviews-list li {
+
+.reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
+  box-sizing: border-box;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  /*padding: 0 20px 20px;*/
   position: relative;
-  width: 85%;
+  width: 100%;
+  border-radius: 20px 0 20px 0;
+  box-shadow: 2px 2px 5px #f1f1f1;
 }
-#reviews-list li p {
-  margin: 0 0 10px;
+
+.reviews-list .namedate-wrapper {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  box-sizing: border-box;
+  /*height: 3em;*/
+  background-color: #333;
 }
-#restaurant-hours td {
+
+.namedate-wrapper .review-name,
+.namedate-wrapper .review-date {
+  line-height: 3em;
+  background-color: transparent;
+  vertical-align: middle;
+}
+
+.namedate-wrapper .review-name {
+  text-align: left;
+  margin: 0 0 0 20px;
+  font-size: 12pt;
+  color: #fff;
+}
+
+.namedate-wrapper .review-date {
+  text-align: right;
+  margin: 4px 20px 0 0;
+  font-size: 10pt;
+  color: #ccc;
+}
+
+.reviews-list .review-rating {
+  padding: 4px 6px;
+  width: 5em;
+  text-align: left;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.review-rating.rating-1 {
+  background-color: #b22222;
+}
+.review-rating.rating-2 {
+  background-color: #ee4500;
+}
+.review-rating.rating-3 {
+  background-color: #ffa500;
+}
+.review-rating.rating-4 {
+  /*background-color: #8a9a22;*/
+  background-color: #dfb700;
+}
+.review-rating.rating-5 {
+  background-color: #228b22;
+}
+
+.reviews-list .review-comments {
   color: #666;
+}
+
+.reviews-list li p {
+  margin: 10px 20px;
+  font-size: 9pt;
+}
+
+/* ====================== RESPONSIVE STYLES ====================== */
+
+/* LET'S GOOOOOO */
+
+/*
+ * This preserves our ratios for our lowest-supported resolutions.
+ * We basically don't support anything smaller than this.
+ */
+@media screen and (max-width: 360px) {
+    body,
+    html,
+    header,
+    main {
+        min-width: 360px;
+        width: 360px;
+    }
+}
+
+/*
+ * Below 400px, we shrink down my name in the top right just a wee bit.
+ * At the normal size, it wraps when we get under ~385px,
+ * which is wholly undesired.
+ * We also adjust the padding to try to preserve the top line of the name.
+ 
+@media screen and (max-width: 400px) {
+    .header-name {
+        font-size: 2.8em;
+    }
+
+    .header-right {
+        padding-bottom: 14px;
+    }
+}
+*/
+
+/*
+ * This is our real mid-range where things are significantly different.
+ * We have a single column until we hit 500px, then a few things happen.
+ * The first featured link shifts to a wider image and continues to stretch.
+ * The second and third (and all following, in theory) then make two columns.
+ */
+@media screen and (min-width: 500px) and (max-width: 749px) {
+  /*
+    .featured-link:first-child {
+        width: 500px;
+    }*/
+
+    /* Take every even child of .featured-link and put it in the right column 
+    .featured-link:nth-child(2n) {
+        justify-content: flex-start;
+    }
+
+    .featured-link:nth-child(2n) .link-screen {
+        padding-right: 7px;
+    }*/
+
+    /*
+     * Take every odd child of .featured-link and put it in the left column
+     * EXCEPT for the first child, that's our wide image.
+     
+    .featured-link:nth-child(2n+3) {
+        justify-content: flex-end;
+    }
+
+    .featured-link:nth-child(2n+3) .link-screen {
+        padding-left: 7px;
+    }*/
+
+}
+
+/*
+ * Once we get to our final size, we sort the featured links into 3 columns.
+ */
+@media screen and (min-width: 750px) {
+    /* This just keeps our images consistent in this final size range.
+    .link-screen {
+        min-width: 240px;
+        max-width: 260px;
+    }*/
+
+    /* These last few format our 3 columns so they look pretty. 
+    .featured-link:nth-child(3n-2) {
+        justify-content: flex-start;
+    }
+
+    .featured-link:nth-child(3n-2) .link-screen {
+        padding-right: 7px;
+    }
+
+    .featured-link:nth-child(3n-1) {
+        justify-content: center;
+    }
+
+    .featured-link:nth-child(3n-1) .link-screen {
+        padding-right: 7px;
+        padding-left: 7px;
+    }
+
+    .featured-link:nth-child(3n) {
+        justify-content: flex-end;
+    }
+
+    .featured-link:nth-child(3n) .link-screen {
+        padding-left: 7px;
+    }*/
+
+}
+
+/*
+ * After we get over 800px, we set our static width and just expand the margins.
+ */
+@media screen and (min-width: 800px) {
+    body,
+    html {
+        width: 1vw;
+        margin: 0 auto;
+    }
+    
+    /* For the map, header, and footer, we always want it to fill the screen width. */
+    .inside header, 
+    .inside .maincontent .map-container,
+    .inside .footer {
+      width: 1vw;
+    }
+    
+    .maincontent .restaurants-list,
+    .maincontent .restaurant-container,
+    .maincontent .review-container {
+      max-width: 800px;
+      width: 800px;
+      margin: 0 auto;
+    }
 }
